test_regress/t/t_randomize_method_bad.out
%Error: t/t_randomize_method_bad.v:8:17: 'randomize' is a predefined class method; redefinition not allowed (IEEE 1800-2023 18.6.3)
    8 |    function int randomize;
      |                 ^~~~~~~~~
%Error: t/t_randomize_method_bad.v:14:18: 'randomize' is a predefined class method; redefinition not allowed (IEEE 1800-2023 18.6.3)
   14 |    function void randomize(int x);
      |                  ^~~~~~~~~
%Error: t/t_randomize_method_bad.v:16:18: 'srandom' is a predefined class method; redefinition not allowed (IEEE 1800-2023 18.6.3)
   16 |    function void srandom(int seed);
      |                  ^~~~~~~
%Error: Exiting due to
